# piAppAES-RSA

./: .gitignore  CMakeLists.txt  README.md  build.sh  bullshit.txt  encrypt_and_commit.sh  encrypt_local.cpp
.github/: deploy.yaml
.github/workflows/: deploy.yml
FPGA_Files/: AES_Module.sv  AES_package.sv  Basys3_TextDecrypt_UARTEcho.sv  EECE_644_Project_Final.xpr  Hybrid_RSA_AES_Top.sv  RSA_Module.sv  Readme  UART_RX.sv  UART_TX.sv  tb_AES_Module.sv  tb_Basys3_TextDecrypt_UARTEcho.sv  tb_Hybrid_RSA_AES_Top.sv  tb_RSA_Module.sv
piApp/: CMakeLists.txt  encrypted.txt  main.cpp
